--- a/README
+++ b/README
@@ -15,4 +15,4 @@ Requerimientos
 --------------
 
 Sinatra Ruby (http://www.sinatrarb.com/)
-Ruby/MySQL (http://www.tmtm.org/en/ruby/mysql/)
+Ruby/PostgreSQL
